added data cleaning

--- a/MaraTFID-SVM.ipynb
+++ b/MaraTFID-SVM.ipynb
@@ -23,6 +23,8 @@
     "#what does the data look like\n",
     "\n",
     "train_df.iloc[:1,:]\n",
+    "\n",
+    "#Flag to either produce results with cleaned or uncleaned data\n",
     "clense_data=True"
    ]
   },
@@ -190,13 +192,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Dillindallin\n",
-      "Daalia \n",
-      "getting started\n",
-      "\n",
+      "Requirement already satisfied: pyspellchecker in /Users/marttiylikoski/opt/anaconda3/lib/python3.7/site-packages (0.5.4)\n",
+      "tää on emiserkki: https://dillindallin.com\n",
+      "Huba haba\n",
       "What shall we do today zequestion\n",
-      "haa  \n"
+      "correct me please\n",
+      "haa hee ja jee  \n"
      ]
     }
    ],
@@ -214,7 +215,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "count_vectorizer = feature_extraction.text.CountVectorizer()"
    ]
   },
@@ -299,7 +299,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0.61602497, 0.55876289, 0.62426614])"
+       "array([0.5979269 , 0.56410256, 0.58805513])"
       ]
      },
      "execution_count": 10,
@@ -417,9 +417,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>keyword</th>\n",
+       "      <th>location</th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Just happened a terrible car crash</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Heard about #earthquake is different cities, s...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>there is a forest fire at spot pond, geese are...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Apocalypse lighting. #Spokane #wildfires</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>11</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Typhoon Soudelor kills 28 in China and Taiwan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3258</td>\n",
+       "      <td>10861</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>EARTHQUAKE SAFETY LOS ANGELES ÛÒ SAFETY FASTE...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3259</td>\n",
+       "      <td>10865</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Storm in RI worse than last hurricane. My city...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3260</td>\n",
+       "      <td>10868</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Green Line derailment in Chicago http://t.co/U...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3261</td>\n",
+       "      <td>10874</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MEG issues Hazardous Weather Outlook (HWO) htt...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3262</td>\n",
+       "      <td>10875</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>#CityofCalgary has activated its Municipal Eme...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3263 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         id keyword location  \\\n",
+       "0         0     NaN      NaN   \n",
+       "1         2     NaN      NaN   \n",
+       "2         3     NaN      NaN   \n",
+       "3         9     NaN      NaN   \n",
+       "4        11     NaN      NaN   \n",
+       "...     ...     ...      ...   \n",
+       "3258  10861     NaN      NaN   \n",
+       "3259  10865     NaN      NaN   \n",
+       "3260  10868     NaN      NaN   \n",
+       "3261  10874     NaN      NaN   \n",
+       "3262  10875     NaN      NaN   \n",
+       "\n",
+       "                                                   text  \n",
+       "0                    Just happened a terrible car crash  \n",
+       "1     Heard about #earthquake is different cities, s...  \n",
+       "2     there is a forest fire at spot pond, geese are...  \n",
+       "3              Apocalypse lighting. #Spokane #wildfires  \n",
+       "4         Typhoon Soudelor kills 28 in China and Taiwan  \n",
+       "...                                                 ...  \n",
+       "3258  EARTHQUAKE SAFETY LOS ANGELES ÛÒ SAFETY FASTE...  \n",
+       "3259  Storm in RI worse than last hurricane. My city...  \n",
+       "3260  Green Line derailment in Chicago http://t.co/U...  \n",
+       "3261  MEG issues Hazardous Weather Outlook (HWO) htt...  \n",
+       "3262  #CityofCalgary has activated its Municipal Eme...  \n",
+       "\n",
+       "[3263 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
