--- a/MaraTFIDNB.ipynb
+++ b/MaraTFIDNB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
        "1       1  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
        "16  24     NaN      NaN   I love fruits       0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,20 +184,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Dillindallin\n",
-      "Daalia \n",
-      "getting started\n",
-      "\n",
-      "What shall we do today zequestion\n",
-      "haa  \n"
+      "Requirement already satisfied: pyspellchecker in /Users/marttiylikoski/opt/anaconda3/lib/python3.7/site-packages (0.5.4)\r\n"
      ]
     }
    ],
@@ -211,17 +205,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "count_vectorizer = feature_extraction.text.CountVectorizer()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,16 +226,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(7613, 17798)"
+       "(7613, 14731)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +270,7 @@
        "Name: target, Length: 7613, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,21 +278,25 @@
    "source": [
     "from sklearn.naive_bayes import MultinomialNB\n",
     "text_clf = MultinomialNB().fit(train_tfidf, train_df[\"target\"])\n",
-    "train_df[\"target\"]"
+    "\n",
+    "#text_clf = linear_model.RidgeClassifier().fit(train_tfidf, train_df[\"target\"])\n",
+    "\n",
+    "\n",
+    "train_df[\"target\"]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.67159035, 0.65848113, 0.72546476])"
+       "array([0.66949153, 0.63975955, 0.71786169])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,18 +308,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "#scores = model_selection.cross_val_score(tfidf, train_vectors, train_df[\"target\"], cv=3, scoring=\"f1\")\n",
     "#scores\n",
-    "predicted = text_clf.predict(test_vectors)\n"
+    "predicted = text_clf.predict(test_vectors)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +366,7 @@
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>9</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
@@ -385,11 +382,11 @@
        "0   0       1\n",
        "1   2       0\n",
        "2   3       1\n",
-       "3   9       1\n",
+       "3   9       0\n",
        "4  11       1"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,13 +411,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "words fire \t coef \t -6.113042\n",
+      "words bomb \t coef \t -6.426725\n",
+      "words kill \t coef \t -6.528142\n",
+      "words california \t coef \t -6.635210\n",
+      "words news \t coef \t -6.674741\n",
+      "words flood \t coef \t -6.778358\n",
+      "words disast \t coef \t -6.791222\n",
+      "words suicid \t coef \t -6.791905\n",
+      "words famili \t coef \t -6.798598\n",
+      "words home \t coef \t -6.802261\n",
+      "words crash \t coef \t -6.803864\n",
+      "words train \t coef \t -6.804363\n",
+      "words via \t coef \t -6.820091\n",
+      "words hiroshima \t coef \t -6.864022\n",
+      "words wildfir \t coef \t -6.885997\n",
+      "words evacu \t coef \t -6.887608\n",
+      "words attack \t coef \t -6.916233\n",
+      "words build \t coef \t -6.927837\n",
+      "words storm \t coef \t -6.938618\n",
+      "words polic \t coef \t -6.939976\n"
+     ]
+    }
+   ],
+   "source": [
+    "features_by_ind = count_vectorizer.get_feature_names()\n",
+    "#count_vectorizer.vocabulary_\n",
+    "ordern = []\n",
+    "coeffs=np.vstack(text_clf.coef_)\n",
+    "for i in range(len(text_clf.coef_[0])):\n",
+    "    ordern.append(i)\n",
+    "coeffs=np.column_stack((ordern,text_clf.coef_[0]))\n",
+    "#print (b)\n",
+    "\n",
+    "sorted_array = coeffs[np.argsort(coeffs[:, 1])]\n",
+    "\n",
+    "wc = len(sorted_array)\n",
+    "for i in range(20):\n",
+    "    ind = wc-(i+1)\n",
+    "    print (\"words %s \\t coef \\t %f\" % (features_by_ind[int(sorted_array[ind][0])],  sorted_array[ind][1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#tsekataan miten hyvin tää meni\n",
-    "import matplotlib.pyplot as plt"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
