--- a/NLP Tutorial from Kaggle.ipynb
+++ b/NLP Tutorial from Kaggle.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sample NLP notebook from Kaggle to get started. USed it as boilerplate for futher algortith trials.\n",
+    "Sample NLP notebook from Kaggle to get started. Used it as boilerplate for futher algortith trials.\n",
+    "https://www.kaggle.com/philculliton/nlp-getting-started-tutorial\n",
     "\n",
     "Analyse provided twitter data that is pre-processed to find out \n",
     "natural catastrophe tweets from it."
@@ -12,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,168 +41,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 202,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>keyword</th>\n",
-       "      <th>location</th>\n",
-       "      <th>text</th>\n",
-       "      <th>target</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>15</td>\n",
-       "      <td>23</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>What's up man?</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>16</td>\n",
-       "      <td>24</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>I love fruits</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>17</td>\n",
-       "      <td>25</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Summer is lovely</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>18</td>\n",
-       "      <td>26</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>My car is so fast</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>19</td>\n",
-       "      <td>28</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>What a goooooooaaaaaal!!!!!!</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>7581</td>\n",
-       "      <td>10833</td>\n",
-       "      <td>wrecked</td>\n",
-       "      <td>Lincoln</td>\n",
-       "      <td>@engineshed Great atmosphere at the British Li...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>7582</td>\n",
-       "      <td>10834</td>\n",
-       "      <td>wrecked</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Cramer: Iger's 3 words that wrecked Disney's s...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>7584</td>\n",
-       "      <td>10837</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>These boxes are ready to explode! Exploding Ki...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>7587</td>\n",
-       "      <td>10841</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Sirens everywhere!</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>7593</td>\n",
-       "      <td>10848</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>I just heard a really loud bang and everyone i...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>4342 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         id  keyword location  \\\n",
-       "15       23      NaN      NaN   \n",
-       "16       24      NaN      NaN   \n",
-       "17       25      NaN      NaN   \n",
-       "18       26      NaN      NaN   \n",
-       "19       28      NaN      NaN   \n",
-       "...     ...      ...      ...   \n",
-       "7581  10833  wrecked  Lincoln   \n",
-       "7582  10834  wrecked      NaN   \n",
-       "7584  10837      NaN      NaN   \n",
-       "7587  10841      NaN      NaN   \n",
-       "7593  10848      NaN      NaN   \n",
-       "\n",
-       "                                                   text  target  \n",
-       "15                                       What's up man?       0  \n",
-       "16                                        I love fruits       0  \n",
-       "17                                     Summer is lovely       0  \n",
-       "18                                    My car is so fast       0  \n",
-       "19                         What a goooooooaaaaaal!!!!!!       0  \n",
-       "...                                                 ...     ...  \n",
-       "7581  @engineshed Great atmosphere at the British Li...       0  \n",
-       "7582  Cramer: Iger's 3 words that wrecked Disney's s...       0  \n",
-       "7584  These boxes are ready to explode! Exploding Ki...       0  \n",
-       "7587                                 Sirens everywhere!       0  \n",
-       "7593  I just heard a really loud bang and everyone i...       0  \n",
-       "\n",
-       "[4342 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "train_df[train_df[\"target\"]==0]"
+    "train_df[train_df[\"target\"]==0]\n",
+    "clense_data=True"
    ]
   },
   {
@@ -213,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +213,7 @@
        "[3271 rows x 5 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +309,7 @@
        "max    10873.000000     1.00000"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +382,7 @@
        "1       1  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +393,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pyspellchecker in /Users/marttiylikoski/opt/anaconda3/lib/python3.7/site-packages (0.5.4)\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "#clense data is so instructed, to test whether cleaning data improves performance\n",
+    "#lets clean the data\n",
+    "if (clense_data==True):\n",
+    "    %run DataClenser.ipynb\n",
+    "    train_df['text'] = train_df['text'].apply(lambda x: text_clense(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,18 +426,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "matrix([[0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 1, 0, 0,\n",
-       "         0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0,\n",
-       "         0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 0]])"
+       "matrix([[0, 0, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0,\n",
+       "         0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0]])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,17 +448,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_vectors = count_vectorizer.fit_transform(train_df[\"text\"])\n",
-    "test_vectors = count_vectorizer.transform(test_df[\"text\"])"
+    "test_vectors = count_vectorizer.transform(test_df[\"text\"])\n",
+    "#count_vectorizer.get_feature_names()\n",
+    "#count_vectorizer.vocabulary_\n",
+    "#https://scikit-learn.org/stable/modules/generated/sklearn.feature_extraction.text.CountVectorizer.html"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,16 +470,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.60355649, 0.57607656, 0.64454064])"
+       "array([0.60941542, 0.55202312, 0.62224308])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 224,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,29 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "RidgeClassifier(alpha=1.0, class_weight=None, copy_X=True, fit_intercept=True,\n",
-       "                max_iter=None, normalize=False, random_state=None,\n",
-       "                solver='auto', tol=0.001)"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "clf.fit(train_vectors, train_df[\"target\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -695,12 +541,12 @@
        "    <tr>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
@@ -723,14 +569,14 @@
       ],
       "text/plain": [
        "   id  target\n",
-       "0   0       0\n",
-       "1   2       1\n",
+       "0   0       1\n",
+       "1   2       0\n",
        "2   3       1\n",
        "3   9       0\n",
        "4  11       1"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,11 +587,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_submission.to_csv(\"submission.csv\", index=False)"
+    "if (clense_data==True):\n",
+    "    sample_submission.to_csv(\"submission_clensed_data.csv\", index=False)\n",
+    "else:\n",
+    "    sample_submission.to_csv(\"submission.csv\", index=False)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "words distanc \t coef \t 0.924824\n",
+      "words ks94 \t coef \t 0.917993\n",
+      "words allenenbot \t coef \t 0.911874\n",
+      "words itssselenaluna \t coef \t 0.903681\n",
+      "words disneyirh \t coef \t 0.898055\n",
+      "words nochilllukeham \t coef \t 0.851631\n",
+      "words awar \t coef \t 0.841359\n",
+      "words x1392 \t coef \t 0.828217\n",
+      "words soonermag \t coef \t 0.824277\n",
+      "words prob \t coef \t 0.823648\n",
+      "words hiroshima \t coef \t 0.767220\n",
+      "words toddyrockstar \t coef \t 0.765711\n",
+      "words grate \t coef \t 0.763147\n",
+      "words sevenfigz \t coef \t 0.763081\n",
+      "words lorr \t coef \t 0.753842\n",
+      "words tianta \t coef \t 0.749495\n",
+      "words jrowah \t coef \t 0.749257\n",
+      "words daviesmutia \t coef \t 0.748856\n",
+      "words signup \t coef \t 0.748804\n",
+      "words temecafreeman \t coef \t 0.748115\n"
+     ]
+    }
+   ],
+   "source": [
+    "clf.fit(train_vectors, train_df[\"target\"])\n",
+    "#print(\"coefficients\", clf.coef_)\n",
+    "#print (type (clf.coef_))\n",
+    "features_by_ind = count_vectorizer.get_feature_names()\n",
+    "#count_vectorizer.vocabulary_\n",
+    "ordern = []\n",
+    "coeffs=np.vstack(clf.coef_)\n",
+    "for i in range(len(clf.coef_[0])):\n",
+    "    ordern.append(i)\n",
+    "coeffs=np.column_stack((ordern,clf.coef_[0]))\n",
+    "#print (b)\n",
+    "\n",
+    "sorted_array = coeffs[np.argsort(coeffs[:, 1])]\n",
+    "sorted_array[1][1]\n",
+    "\n",
+    "wc = len(sorted_array)\n",
+    "for i in range(20):\n",
+    "    ind = wc-(i+1)\n",
+    "    print (\"words %s \\t coef \\t %f\" % (features_by_ind[int(sorted_array[ind][0])],  sorted_array[ind][1]))"
    ]
   },
   {
