Small data helper changes

--- a/DataHelpers.ipynb
+++ b/DataHelpers.ipynb
@@ -76,7 +76,7 @@
     "#plot_confision_matrix(train_pred_BERT_int, train['target'].values, 'Confusion matrix for BERT model', figsize=(7,7))\n",
     "\n",
     "# Showing Confusion Matrix\n",
-    "def plot_confusion_matrix(y_true, y_pred, title, figsize=(5,5)):\n",
+    "def plot_confusion_matrixy(y_true, y_pred, title, figsize=(5,5)):\n",
     "    cm = confusion_matrix(y_true, y_pred, labels=np.unique(y_true))\n",
     "    cm_sum = np.sum(cm, axis=1, keepdims=True)\n",
     "    cm_perc = cm / cm_sum.astype(float) * 100\n",
